--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
   /:
-    url: "https://author-p34812-e1712459.adobeaemcloud.com//bin/franklin.delivery/arthuursantos/aem-edge-ue"
+    url: "https://author-p34812-e1712459.adobeaemcloud.com/bin/franklin.delivery/arthuursantos/aem-edge-ue"
     type: "markup"
     suffix: ".html"
