--- a/fstab.yaml
+++ b/fstab.yaml
@@ -3,3 +3,7 @@ mountpoints:
     url: "https://author-p34812-e1712500.adobeaemcloud.com/bin/franklin.delivery/arthuursantos/aem-edge-ue/main"
     type: "markup"
     suffix: ".html"
+  /dev:
+    url: "https://author-p34812-e1712500.adobeaemcloud.com/bin/franklin.delivery/arthuursantos/aem-edge-ue/dev"
+    type: "markup"
+    suffix: ".html"
